<resources>
    <string name="app_name">Flag Predators</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_none" />

    <string name="title">Flag Predators</string>
    <string name="text_content">Enter the content</string>
    <string name="textview_result">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="button_connect">Connect</string>
    <string name="button_start">START</string>
    <string name="button_settings">SETTINGS</string>
    <string name="button_about">ABOUT</string>
    <string name="button_back">BACK</string>
    <string name="button_create">CREATE</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_leave">Leave</string>

    <string name="label_register">Player ID: </string>
    <string name="button_set_name">Register</string>
    <string name="label_username">Username:</string>
    <string name="edittext_username_hint">Type username</string>


    <string name="title_activity_start">StartActivity</string>
    <string name="text_title">Choose your role</string>
    <string name="button_join_a_game">JOIN AN EXISTING GAME</string>
    <string name="button_create_a_new_game">CREATE A NEW GAME</string>
    <string name="text_latitude">Latitude :</string>
    <string name="text_longitude">Longitude :</string>
    <string name="button_unbind_sensingservice">Unbind</string>

    <string name="title_activity_game_settings">GameSettingsActivity</string>
    <string name="label_no_of_players">Number of players:</string>
    <string name="label_no_of_flags">Number of flags:</string>
    <string name="text_two_players">2</string>
    <string name="text_four_players">4</string>
    <string name="text_six_players">6</string>
    <string name="text_eight_players">8</string>
    <string name="text_ten_players">10</string>
    <string name="text_a_flag">1</string>
    <string name="text_two_flags">2</string>
    <string name="text_three_flags">3</string>
    <string name="label_boundary">Boundary:</string>
    <string name="text_forty_meter">15 m^2</string>
    <string name="text_fifty_meter">20 m^2</string>
    <string name="text_sixty_meter">25 m^2</string>
    <string name="text_current_location">Current Location:</string>
    <string name="text_location"></string>
    <string name="label_status">Status:</string>

    <string name="title_activity_game_room">GameRoomActivity</string>
    <string name="label_game_name">Room</string>
    <string name="label_red_team">Red Team</string>
    <string name="label_blue_team">Blue Team</string>
    <string name="text_red_player_1">Red Player 1</string>
    <string name="text_red_player_2">Red Player 2</string>
    <string name="text_red_player_3">Red Player 3</string>
    <string name="text_red_player_4">Red Player 4</string>
    <string name="text_red_player_5">Red Player 5</string>
    <string name="text_blue_player_1">Blue Player 1</string>
    <string name="text_blue_player_2">Blue Player 2</string>
    <string name="text_blue_player_3">Blue Player 3</string>
    <string name="text_blue_player_4">Blue Player 4</string>
    <string name="text_blue_player_5">Blue Player 5</string>
    <string name="button_add_red_team">ADD RED TEAM</string>
    <string name="button_add_blue_team">ADD BLUE TEAM</string>

    <string name="title_activity_in_game">InGameActivity</string>
    <string name="text_in_bounds">Boundary:</string>
    <string name="button_update">UPDATE</string>
    <string name="button_test_ad">TEST</string>
    <string name="lablel_game_status">Status:</string>
    <string name="lable_distance">Distance:</string>
    <string name="text_centre_latitude">CentreLat:</string>
    <string name="text_centre_longitude">CentreLng:</string>
    <string name="button_refresh">Check Boundary</string>

    <string name="title_activity_room_list">RoomListActivity</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="button_pattern_get_flag">GET FLAG</string>
    <string name="button_pattern_get_base">BACK TO BASE</string>
    <string name="button_pattern_out_of_boundary">OUT OF BOUNDS</string>
    <string name="button_pattern_get_caught">GET CAUGHT</string>
    <string name="label_haptic_pattern">HAPTIC FEEDBACK</string>
    <string name="button_reconnect">Reconnect</string>


</resources>
