<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="uk.ac.qmul.flagpredators.ShowRoomsActivity"
    android:id="@+id/listLinearLayout"
    android:background="@drawable/background_black">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/buttonLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:id="@+id/backButton"
            android:onClick="backToStartOnClick"
            android:textColor="@drawable/text_red_selector"
            android:background="@drawable/button_red_stroke_selector"/>

        <Space
            android:layout_width="60dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            android:id="@+id/updateButton"
            android:onClick="updateListOnClick"
            android:textColor="@drawable/text_green_selector"
            android:background="@drawable/button_green_stroke_selector" />
    </LinearLayout>

    <Space
        android:layout_width="60dp"
        android:layout_height="10dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listLayout"></LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="60dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/reconnectLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_reconnect"
            android:id="@+id/reconnectButton"
            android:onClick="reconnectOnClick"
            android:textColor="@drawable/text_pink_selector"
            android:background="@drawable/button_pink_stroke_selector"/>

    </LinearLayout>


</LinearLayout>
